fix(backdrop): sync visibility state by prop, also ensure fade in
[skip ci]

--- a/@ecomplus/storefront-components/src/scss/ABackdrop.scss
+++ b/@ecomplus/storefront-components/src/scss/ABackdrop.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   height: 100vh;
   background-color: var(--dark);
-  z-index: 1080;
-  transition: opacity .15s linear;
+  opacity: .5;
+  cursor: pointer;
+  z-index: -100;
 }
